<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.sf.latexdraw</groupId>
    <artifactId>latexdraw.core</artifactId>
    <name>LaTeXDraw</name>
    <version>4.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <argLine>-Dheadless.geometry=1920x1080-32 -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.text=t2k
        </argLine>
        <malai.version>3.0-SNAPSHOT</malai.version>
        <antlr.version>4.7.1</antlr.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <repository>
            <id>mavenInriaSnapshot</id>
            <name>http://maven.inria.fr-snapshots</name>
            <url>http://maven.inria.fr/artifactory/malai-public-snapshot</url>
        </repository>
        <repository>
            <id>mavenInriaRelease</id>
            <name>http://maven.inria.fr-releases</name>
            <url>http://maven.inria.fr/artifactory/malai-public-release</url>
        </repository>
        <repository>
            <id>testfx</id>
            <name>testfx</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>net.sf.latexdraw.LaTeXDraw</mainClass>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                    <includes>
                        <include>lang/</include>
                        <include>res/</include>
                        <include>net/</include>
                        <include>fxml/</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <compilerId>javac-with-errorprone</compilerId>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <executable>javac</executable>
                    <source>8</source>
                    <target>8</target>
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                        <arg>-XepExcludedPaths:.*/generated-sources/.*</arg>
                        <arg>-Xep:StringSplitter:OFF</arg>
                        <arg>-Xep:DefaultCharset:OFF</arg>
                        <arg>-Xlint</arg>
                        <arg>-Xlint:-unchecked</arg>
                        <arg>-Xlint:-serial</arg>
                    </compilerArgs>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-compiler-javac-errorprone</artifactId>
                        <version>2.8</version>
                    </dependency>
                    <dependency>
                        <groupId>com.google.errorprone</groupId>
                        <artifactId>error_prone_core</artifactId>
                        <version>2.2.0</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20.1</version>
                <configuration>
                    <threadCount>1</threadCount>
                    <skipTests>false</skipTests>
                    <testFailureIgnore>false</testFailureIgnore>
                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>${antlr.version}</version>
                <configuration>
                    <visitor>false</visitor>
                    <listener>true</listener>
                </configuration>
                <executions>
                    <execution>
                        <id>antlr</id>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--             <plugin> -->
            <!--                 <groupId>org.codehaus.mojo</groupId> -->
            <!--                 <artifactId>osxappbundle-maven-plugin</artifactId> -->
            <!--                 <version>1.0-alpha-2</version> -->
            <!--                 <configuration> -->
            <!--                     <mainClass>net.sf.latexdraw.LaTeXDraw</mainClass> -->
            <!--                   	<javaApplicationStub>${basedir}/src/osx/universalJavaApplicationStub</javaApplicationStub> -->
            <!--                     <jvmVersion>1.7+</jvmVersion> -->
            <!--                 </configuration> -->
            <!--                 <executions> -->
            <!--                     <execution> -->
            <!--                         <phase>package</phase> -->
            <!--                         <goals> -->
            <!--                             <goal>bundle</goal> -->
            <!--                         </goals> -->
            <!--                     </execution> -->
            <!--                </executions> -->
            <!--            </plugin> -->
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <version>2.15.0</version>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>pdf-renderer</artifactId>
            <version>1.0.5</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr.version}</version>
        </dependency>
        <dependency>
            <groupId>org.malai</groupId>
            <artifactId>malai.javafx</artifactId>
            <version>${malai.version}</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jlibeps</groupId>
            <artifactId>jlibeps</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>4.0.11-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit</artifactId>
            <version>4.0.11-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>openjfx-monocle</artifactId>
            <version>8u76-b04</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-junit</artifactId>
            <version>2.0.0.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
